@@ -322,8 +322,8 @@ public class StudioProjectTemplatesInitializer implements IProjectTemplateInitia
 
     private RectangularNodeStyleDescription createRectangularNodeStyle(View view, String color, String borderColor) {
         RectangularNodeStyleDescription entity2Style = DiagramFactory.eINSTANCE.createRectangularNodeStyleDescription();
-        entity2Style.setWidthComputationExpression("1");
-        entity2Style.setHeightComputationExpression("1");
+        entity2Style.setWidthComputationExpression("150");
+        entity2Style.setHeightComputationExpression("70");
         entity2Style.setColor(this.getColorFromPalette(view, color));
         entity2Style.setBorderColor(this.getColorFromPalette(view, borderColor));
         entity2Style.setBorderRadius(3);
