@@ -254,7 +254,7 @@ public class RectangularNodeStyleDescriptionImpl extends StyleImpl implements Re
      * @generated
      * @ordered
      */
-    protected static final String WIDTH_COMPUTATION_EXPRESSION_EDEFAULT = "1";
+    protected static final String WIDTH_COMPUTATION_EXPRESSION_EDEFAULT = "150";
 
     /**
      * The cached value of the '{@link #getWidthComputationExpression() <em>Width Computation Expression</em>}'
@@ -274,7 +274,7 @@ public class RectangularNodeStyleDescriptionImpl extends StyleImpl implements Re
      * @generated
      * @ordered
      */
-    protected static final String HEIGHT_COMPUTATION_EXPRESSION_EDEFAULT = "1";
+    protected static final String HEIGHT_COMPUTATION_EXPRESSION_EDEFAULT = "70";
 
     /**
      * The cached value of the '{@link #getHeightComputationExpression() <em>Height Computation Expression</em>}'
